--- a/frontend/style.css
+++ b/frontend/style.css
@@ -5,7 +5,8 @@ table {
     border: 3px solid black;
     padding: 20px;
 }
-img{
+
+img {
     position: absolute;
     top: 0;
     right: 0;
@@ -17,12 +18,13 @@ label {
     margin-bottom: 8px;
 }
 
-input[type="text"] {
-    width: 30%;
+input[type="text"]{
+    width: 100%; /* Larghezza al 100% della cella */
+    text-align: center;
     padding: 8px;
-    margin-bottom: 20px; /* Distanza tra gli input */
-    border: 1px solid #ccc;
-    border-radius: 5px;
+    font-size: 16px;
+    box-sizing: border-box; /* Assicura che padding non aumenti la larghezza totale */
+    resize: both; /* Permette di ridimensionare i campi di input e textarea */
 }
 
 /* Modifica l'aspetto degli input */
@@ -39,7 +41,7 @@ button {
 body {
     font-family: 'Courier New', Courier, monospace;
     color: rgba(0, 0, 0, 0.548);
-    background-color:white;
+    background-color: white;
     justify-content: center;
 }
 
@@ -56,6 +58,7 @@ th {
     background-color: #f2f2f2;
 }
 
+/* Personalizza la tabella dei pulsanti */
 .tab-button {
     font-family: 'Courier New', Courier, monospace;
     padding: 11px 15px;
@@ -79,11 +82,14 @@ th {
     background-color: rgb(200, 64, 200);
 }
 
+h1 {
+    text-align: center;
+    color: #555;
+    font-size: 4em; /* Aumenta la dimensione del testo */
+}
 
-        h1 {
-            text-align: center;
-            color: #555;
-            font-size: 4em; /* Aumenta la dimensione del testo */
-        }
-        
-      
+/* Stile per la textarea per ingrandirla */
+textarea {
+    height: 120px; /* Aumenta l'altezza della textarea per facilitare la lettura */
+    resize: vertical; /* Consente di ridimensionare la textarea in verticale */
+}
