--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,65 +1,58 @@
-/* Centra la tabella */
 table {
-    width: 50%; /* Imposta la larghezza della tabella */
-    margin: 0 auto; /* Centra la tabella orizzontalmente */
+    width: 50%;
+    margin: 0 auto;
     border: 3px solid black;
     padding: 20px;
-}
-
-img {
+  }
+  
+  img {
     position: absolute;
     top: 0;
     right: 0;
-}
-
-/* Allineamento input text e etichette */
-label {
+  }
+  
+  label {
     display: block;
     margin-bottom: 8px;
-}
-
-input[type="text"]{
-    width: 100%; /* Larghezza al 100% della cella */
+  }
+  
+  input[type="text"] {
+    width: 100%;
     text-align: center;
     padding: 8px;
     font-size: 16px;
-    box-sizing: border-box; /* Assicura che padding non aumenti la larghezza totale */
-    resize: both; /* Permette di ridimensionare i campi di input e textarea */
-}
-
-/* Modifica l'aspetto degli input */
-.form-group {
+    box-sizing: border-box;
+  }
+  
+  .form-group {
     margin-bottom: 15px;
-}
-
-/* Allineamento e margine per il pulsante */
-button {
+  }
+  
+  button {
     display: block;
     margin: auto;
-}
-
-body {
+  }
+  
+  body {
     font-family: 'Courier New', Courier, monospace;
     color: rgba(0, 0, 0, 0.548);
     background-color: white;
-    justify-content: center;
-}
-
-table, th, td {
+  }
+  
+  table, th, td {
     border: 1px solid black;
-}
-
-th, td {
+  }
+  
+  th, td {
     padding: 10px;
     text-align: center;
-}
-
-th {
+  }
+  
+  th {
     background-color: #f2f2f2;
-}
-
-/* Personalizza la tabella dei pulsanti */
-.tab-button {
+  }
+  
+  .tab-button {
     font-family: 'Courier New', Courier, monospace;
     padding: 11px 15px;
     margin: 5px;
@@ -68,29 +61,27 @@ th {
     color: white;
     border: none;
     border-radius: 5px;
-}
-.tab-button:hover {
+  }
+  .tab-button:hover {
     background-color: rgb(255, 0, 255);
     transform: scale(1.1);
-}
-
-.tab-button:active {
+  }
+  .tab-button:active {
     background-color: rgb(200, 0, 200);
-}
-
-.active {
+  }
+  .active {
     background-color: rgb(200, 64, 200);
-}
-
-h1 {
+  }
+  
+  h1 {
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
     color: #555;
-    font-size: 4em; /* Aumenta la dimensione del testo */
-}
-
-/* Stile per la textarea per ingrandirla */
-textarea {
-    height: 120px; /* Aumenta l'altezza della textarea per facilitare la lettura */
-    resize: vertical; /* Consente di ridimensionare la textarea in verticale */
-}
+    font-size: 4em;
+  }
+  
+  textarea {
+    height: 120px;
+    resize: vertical;
+  }
+  
