--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Courier New', Courier, monospace;
-    color: rgba(0, 0, 0, 0.548);
+    color: rgba(0, 0, 0, 0.548);                    
     background-color: white;
   }
   
@@ -37,7 +37,7 @@ body {
   }
   th, td {
     padding: 10px;
-    text-align: center;
+    text-align: center;       /*formato tabelle*/
   }
   th {
     background-color: #f2f2f2;
@@ -56,7 +56,7 @@ body {
   }
   
   button {
-    display: block;
+    display: block;              /*formato pulsanti e stile pulsanti*/
     margin: auto;
   }
   .tab-button {
@@ -86,7 +86,7 @@ body {
     padding: 10px 20px;
     margin: 20px;
     cursor: pointer;
-    background-color: #555;
+    background-color: #555;               /*bottone stampa dati sul computer e f*/
     color: white;
     border: none;
     border-radius: 5px;
@@ -98,7 +98,7 @@ body {
   }
   
   .home-icon {
-    height: 100px;
+    height: 100px;         /*icona home che riporta alla schermata principale*/
     width: 100px;
     position: absolute;
   }
@@ -110,7 +110,7 @@ body {
   input[type="time"],
   select,
   textarea {
-    width: 100px;
+    width: 100px;         /*spazio scrittura attività*/
   }
   textarea {
     height: 120px;
